<resources>
    <string name="app_name">WimmExpenseTracker</string>
    <string name="company_name">Wimm</string>
    <string name="product_name">Expense tracker</string>
    <string name="home_fragment_title">Home</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="daily_sub_text">Remaining budget</string>
    <string name="daily_total">daily total</string>
    <string name="daily_budget">daily budget</string>
    <string name="categories">Categories</string>
    <string name="shared_preference_name">com.codecool.wimmexpensetracker.data.shared_pref</string>
    <string name="month">Month</string>
    <string name="spending">Spending</string>
    <string name="expenses">expenses</string>
    <string name="monthly_total">"Monthly total: "</string>
    <string name="monthly_average">"Monthly average: "</string>
    <string name="add_categories">New category</string>
    <string name="category_name">Category name</string>
    <string name="category_color">Category color</string>
    <string name="category_preview">Preview</string>
    <string name="preview_text_3">Current monthly expense: $???</string>
    <string name="preview_text_2">Total expense : $???</string>
    <string name="create_category">Create category</string>
    <string name="category_finish">Finalize</string>
    <string name="cancel">Cancel</string>
    <string name="category_name_error">The name of the category is too short.</string>
    <string name="total_expenses">Total expenses: $</string>
    <string name="current_month_expenses">Current monthly expense: $</string>
    <string name="expenses_fragment_title">Expenses</string>
    <string name="expenses_fragment_subtitle">New expense</string>
    <string name="title_activity_new_expense">NewExpenseActivity</string>
    <string name="details">Details</string>
    <string name="name">Name</string>
    <string name="short_description">Short description</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="preview_text_total_expense">Total expense : $???</string>
    <string name="create_expense">Create expense</string>
    <string name="preview">Preview</string>
    <string name="preview_amount">$???</string>
    <string name="preview_date">19,December,2020</string>
    <string name="too_short_name">Too short expense name!</string>
    <string name="make_sure_amount">Make sure you typed the amount right!</string>
    <string name="price">The amount must be  greater than 0</string>
    <string name="today_expenses">Today expenses</string>
    <string name="past_expenses">Past expenses</string>
    <string name="category_deleted">Category deleted.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expense_settings">Expense Settings</string>
    <string name="wage">Monthly wage</string>
    <string name="save">How much do you want to save?</string>
    <string name="data_save">Remember to save your changes!</string>
    <string name="save_btn_text">Save</string>
</resources>