<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".settings_fragment.SettingsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:text="@string/expense_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ToolTipText"
                android:textSize="19sp"
                android:layout_margin="20dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1.4dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/under_line"
                app:tint="@color/light_gray"/>

            <EditText
                android:id="@+id/et_my_wage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:layout_marginTop="20dp"
                style="@style/CustomEditText"
                android:hint="@string/wage"
                android:drawableStart="@drawable/ic_baseline_attach_money_24"
                android:inputType="numberDecimal"/>

            <EditText
                android:id="@+id/et_my_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                style="@style/CustomEditText"
                android:hint="@string/save"
                android:drawableStart="@drawable/ic_baseline_attach_money_24"
                android:inputType="numberDecimal"/>

            <EditText
                android:id="@+id/et_daily_max"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                style="@style/CustomEditText"
                android:hint="@string/daily_budget"
                android:drawableStart="@drawable/ic_baseline_attach_money_24"
                android:enabled="false"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/data_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_view"
        android:layout_marginTop="20dp"
        android:text="@string/data_save"
        android:gravity="center"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/data_save"
        android:text="@string/save_btn_text"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>