<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".new_category_activity.AddCategoryActivity">

    <TextView
        android:id="@+id/tooltip_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_name"
        android:textSize="19sp"
        android:fontFamily="@font/ubuntu_bold"
        android:textColor="@color/med_gray"
        android:layout_margin="20dp"/>

    <EditText
        android:layout_margin="20dp"
        android:id="@+id/category_name_et"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".5"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tooltip_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/category_name"
        android:maxLength="15"/>

    <TextView
        android:id="@+id/tooltip_color"
        app:layout_constraintTop_toBottomOf="@id/category_name_et"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_color"
        android:textSize="19sp"
        android:fontFamily="@font/ubuntu_bold"
        android:textColor="@color/med_gray"
        android:layout_margin="20dp"/>

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".3"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/tooltip_color"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="20dp"
        android:columnCount="2">

        <ImageView
            android:id="@+id/color_yellow"
            android:layout_columnWeight="1"
            android:scaleType="fitXY"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/color_lightYellow"/>

        <ImageView
            android:id="@+id/color_blue"
            android:layout_columnWeight="1"
            android:scaleType="fitXY"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/color_lightBlue"/>

        <ImageView
            android:id="@+id/color_red"
            android:layout_columnWeight="1"
            android:scaleType="fitXY"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/color_lightRed"/>

        <ImageView
            android:id="@+id/color_pink"
            android:layout_columnWeight="1"
            android:scaleType="fitXY"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/color_lightPink"/>

        <ImageView
            android:id="@+id/color_green"
            android:layout_columnWeight="1"
            android:scaleType="fitXY"
            android:layout_rowWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/color_lightGreen"/>

    </GridLayout>

    <TextView
        android:id="@+id/tooltip_preview"
        app:layout_constraintTop_toBottomOf="@id/grid"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_preview"
        android:textSize="19sp"
        android:fontFamily="@font/ubuntu_bold"
        android:textColor="@color/med_gray"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintTop_toBottomOf="@id/tooltip_preview"
        android:orientation="vertical">

        <TextView
            android:id="@+id/category_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="19sp"
            tools:text="@string/category_name"/>

        <TextView
            android:id="@+id/total_expense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_regular"
            android:textSize="16sp"
            android:text="@string/preview_text_2"/>

        <TextView
            android:id="@+id/current_month_expense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_regular"
            android:textSize="16sp"
            android:text="@string/preview_text_3"/>

    </LinearLayout>

    <ImageView
        android:layout_marginEnd="5dp"
        android:id="@+id/preview_color"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/linear"
        app:layout_constraintBottom_toBottomOf="@id/linear"
        app:layout_constraintRight_toLeftOf="@id/linear"
        app:layout_constraintLeft_toLeftOf="@id/tooltip_preview"
        android:background="@color/color_lightGreen"/>

    <TextView
        android:id="@+id/tooltip_finish"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_finish"
        android:textSize="19sp"
        android:fontFamily="@font/ubuntu_bold"
        android:textColor="@color/med_gray"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/create_category_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tooltip_finish"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/create_category"
        android:backgroundTint="@color/color_lightGreen"/>

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/create_category_btn"
        app:layout_constraintTop_toBottomOf="@id/create_category_btn"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/color_lightRed"
        android:text="@string/cancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>