<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ApplicationBaseSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".new_expense_activity.NewExpenseActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/details_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/ToolTipText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:text="@string/details"
                    android:textSize="19sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1.4dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/under_line"
                    app:tint="@color/light_gray" />

                <EditText
                    android:id="@+id/title_et"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:drawableStart="@drawable/ic_baseline_subtitles_24"
                    android:hint="@string/name" />

                <EditText
                    android:id="@+id/amount_et"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:drawableStart="@drawable/ic_baseline_attach_money_24"
                    android:hint="@string/amount"
                    android:inputType="numberDecimal" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/category_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintHeight_percent=".55"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_container">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/ToolTipText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:text="@string/category"
                    android:textSize="19sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1.4dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/under_line"
                    app:tint="@color/light_gray" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/category_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    tools:listitem="@layout/category_recycler_row" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent=".5"
            app:layout_constraintTop_toBottomOf="@id/category_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:backgroundTint="@color/color_lightGreen"
            android:text="@string/create_expense"
            />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent=".5"
            app:layout_constraintTop_toBottomOf="@id/button_finish"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:backgroundTint="@color/color_lightRed"
            android:text="@string/create_expense"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>